--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
 #	std_msgs
 	sensor_msgs
 	trajectory_msgs
+	neo_msgs
 )
 
 catkin_package(
@@ -26,6 +27,7 @@ catkin_package(
 #		nav_msgs
 		sensor_msgs
 		trajectory_msgs
+		neo_msgs
 	INCLUDE_DIRS
 		include
 		generated/include
