--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,10 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
+  <build_depend>neo_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
+  <run_depend>neo_msgs</run_depend>
 </package>
