migration to ROS2 and update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.5)
 project(neo_relayboard_v3)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 ## By default build with code optimization and no debug info
@@ -9,30 +9,26 @@ if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif()
 
-find_package(catkin REQUIRED COMPONENTS
-#	nav_msgs
-	roscpp
-#	tf
-#	std_msgs
-	sensor_msgs
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(trajectory_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(neo_msgs2 REQUIRED)
+find_package(neo_srvs2 REQUIRED)
+
+set(dependencies
+	rclcpp
+	std_srvs
 	trajectory_msgs
-	neo_msgs
-	neo_srvs
+	sensor_msgs
+	neo_msgs2
+	neo_srvs2
 )
 
-catkin_package(
-	CATKIN_DEPENDS
-		roscpp
-#		std_msgs
-#		tf
-#		nav_msgs
-		sensor_msgs
-		trajectory_msgs
-		neo_msgs
-		neo_srvs
-	INCLUDE_DIRS
-		include
-		generated/include
+ament_export_include_directories(
+	include
+	generated/include
 )
 
 file(GLOB GENERATED generated/src/*.cpp)
@@ -45,23 +41,28 @@ add_library(relayboardv3 SHARED
 target_include_directories(relayboardv3 PUBLIC
 	include/
 	generated/include/
-	${Boost_INCLUDE_DIRS}
-	${catkin_INCLUDE_DIRS}
 )
 
 target_link_libraries(relayboardv3
 	pilot_public
+	pilot_kinematics_bicycle_interface
 	pilot_kinematics_differential_interface
 	pilot_kinematics_mecanum_interface
 	pilot_kinematics_omnidrive_interface
-	${catkin_LIBRARIES}
+	vnx_base
 )
 
 add_executable(relayboardv3_node
 	src/relayboardv3_node.cpp
 )
 
-add_dependencies(relayboardv3_node ${catkin_EXPORTED_TARGETS})
+ament_target_dependencies(relayboardv3
+	${dependencies}
+)
+
+ament_export_dependencies(relayboardv3
+	${dependencies}
+)
 
 target_link_libraries(relayboardv3_node
 	relayboardv3
@@ -70,11 +71,8 @@ target_link_libraries(relayboardv3_node
 
 add_subdirectory(pilot-public)
 
-
-install(TARGETS relayboardv3 relayboardv3_node
-	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+install(TARGETS relayboardv3 DESTINATION lib/${PROJECT_NAME})
+install(TARGETS relayboardv3_node DESTINATION lib/${PROJECT_NAME})
+install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
 
 
