--- a/config/sample.yaml
+++ b/config/sample.yaml
@@ -6,4 +6,4 @@
     lfp_batteries: False # Set to True if you have LFP Batteries
     lfp_batteries_config: "/home/neobotix/ros2_workspace/src/neo_relayboard_v3/config/addons/lfp-batteries"
     use_multipowr: False #Set to True if you have wallbox
-    use_multipowr_config: "/home/neobotix/ros2_workspace/src/neo_relayboard_v3/config/addons/smart-charger"
+    multipowr_config: "/home/neobotix/ros2_workspace/src/neo_relayboard_v3/config/addons/smart-charger"
