adding support for ROS 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,78 +1,70 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 2.8.3)
 project(neo_relayboard_v3)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-## By default build with code optimization and no debug info
 if(NOT CMAKE_BUILD_TYPE)
-	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif()
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(std_srvs REQUIRED)
-find_package(trajectory_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(neo_msgs2 REQUIRED)
-find_package(neo_srvs2 REQUIRED)
-
-set(dependencies
-	rclcpp
-	std_srvs
-	trajectory_msgs
-	sensor_msgs
-	neo_msgs2
-	neo_srvs2
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  std_srvs
+  trajectory_msgs
+  sensor_msgs
+  neo_msgs
+  neo_srvs
 )
 
-ament_export_include_directories(
-	include
-	generated/include
+catkin_package(
+  INCLUDE_DIRS include generated/include
+  LIBRARIES relayboardv3
+)
+
+include_directories(
+  include
+  generated/include
+  ${catkin_INCLUDE_DIRS}
 )
 
 file(GLOB GENERATED generated/src/*.cpp)
 
 add_library(relayboardv3 SHARED
-	${GENERATED}
-	src/RelayBoardV3.cpp
-)
-
-target_include_directories(relayboardv3 PUBLIC
-	include/
-	generated/include/
+  ${GENERATED}
+  src/RelayBoardV3.cpp
 )
 
 target_link_libraries(relayboardv3
-	pilot_public
-	pilot_kinematics_bicycle_interface
-	pilot_kinematics_differential_interface
-	pilot_kinematics_mecanum_interface
-	pilot_kinematics_omnidrive_interface
-	vnx_base
+  pilot_public
+  pilot_kinematics_bicycle_interface
+  pilot_kinematics_differential_interface
+  pilot_kinematics_mecanum_interface
+  pilot_kinematics_omnidrive_interface
+  vnx_base
+  ${catkin_LIBRARIES}
 )
 
 add_executable(relayboardv3_node
-	src/relayboardv3_node.cpp
-)
-
-ament_target_dependencies(relayboardv3
-	${dependencies}
-)
-
-ament_export_dependencies(relayboardv3
-	${dependencies}
+  src/relayboardv3_node.cpp
 )
 
 target_link_libraries(relayboardv3_node
-	relayboardv3
+  relayboardv3
+  ${catkin_LIBRARIES}
 )
-
 
 add_subdirectory(pilot-public)
 
-install(TARGETS relayboardv3 DESTINATION lib/${PROJECT_NAME})
-install(TARGETS relayboardv3_node DESTINATION lib/${PROJECT_NAME})
-install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME})
+install(TARGETS relayboardv3 relayboardv3_node
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
 
-ament_package()
+install(DIRECTORY include/ generated/include/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+install(DIRECTORY launch config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
