--- a/package.xml
+++ b/package.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package format="2">
   <name>neo_relayboard_v3</name>
   <version>1.0.0</version>
-  <description>ROS2 node for Neobotix RelayBoardV3</description>
+  <description>ROS1 node for Neobotix RelayBoardV3 (ported from ROS2)</description>
 
   <maintainer email="ros@neobotix.de">Neobotix</maintainer>
   <license>BSD</license>
   <url type="website">https://www.neobotix-roboter.de/</url>
   <author>Jakob Wenzel</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>rclcpp</exec_depend>
-  <exec_depend>std_srvs</exec_depend>
-  <exec_depend>trajectory_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>neo_msgs2</exec_depend>
-  <exec_depend>neo_srvs2</exec_depend>
+  <depend>roscpp</depend>
+  <depend>std_srvs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>neo_msgs</depend>
+  <depend>neo_srvs</depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
 </package>
 
